# OM1

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 🌟-bounty.md
.github/workflows/: nightly-integration-tests.yml  unitest.yml
config/: baby.json5  conversation.json5  cubly.json5  deepseek.json5  fabric_gps.json5  gazebo_sim.json5  gemini.json5  greeting.json5  grok.json5  limx_tron_autonomy.json5  ollama.json5  open_ai.json5  openrouter.json5  robot_wallet_safe.json5  spot.json5  spot_modes.json5  tesla.json5  test.json5  test_ble.json5  test_ble_gps.json5  test_gps.json5  test_lidar.json5  test_odom.json5  turtlebot4.json5  turtlebot4_lidar.json5  turtlebot4_lidar_gps.json5  turtlebot4_old.json5  twitter.json5  ubtech_yanshee.json5  unitree_g1_humanoid.json5  unitree_go2_autonomy.json5  unitree_go2_autonomy_advance.json5  unitree_go2_autonomy_sim.json5  unitree_go2_basic.json5  unitree_go2_mapper.json5  unitree_go2_mapper_bits.json5  unitree_go2_mapper_bits_ai.json5  unitree_go2_modes.json5  unitree_go2_remote.json5  yolo.json5
config/schema/: multi_mode_schema.json  single_mode_schema.json
docs/deployment/: vps-gpu-guide.md
docs/developer_cookbook/: config.mdx  introduction.mdx
docs/developing/: 1_get-started.mdx  6_actions.mdx
docs/examples/: gazebo.mdx
docs/full_autonomy_guidelines/: architecture_overview.mdx  mode_selection.mdx  om1_avatar.mdx  om1_ros2_sdk.mdx  om1_system_setup.mdx  om1_video_processor.mdx  pre_config.mdx  unitree_sdk.mdx
mintlify/: docs.json
mintlify/developer_cookbook/: introduction.mdx  new_mode.mdx
mintlify/developing/: 1_get-started.mdx  6_actions.mdx
mintlify/examples/: gazebo.mdx  overview.mdx
mintlify/full_autonomy_guidelines/: brainpack_introduction.mdx  om.mdx  unitree_sdk.mdx
scripts/: generate_schema.py  mintlify.sh
src/: baby_run.py  cli.py
src/actions/: __init__.py  base.py  orchestrator.py
src/backgrounds/: base.py  orchestrator.py
src/hooks/: person_follow_hook.py
src/inputs/: __init__.py  orchestrator.py
src/llm/: function_schemas.py
src/providers/: asr_provider.py  asr_rtsp_provider.py  avatar_llm_state_provider.py  avatar_provider.py  d435_provider.py  elevenlabs_tts_provider.py  fabric_map_provider.py  face_presence_provider.py  function_call_provider.py  gallery_identities_provider.py  gps_provider.py  greeting_conversation_state_provider.py  io_provider.py  odom_provider.py  riva_tts_provider.py  ros2_publisher_provider.py  rplidar_driver.py  rplidar_provider.py  rtk_provider.py  simple_paths_provider.py  singleton.py  (+22 more)
(+286 files in other folders)
